# LMath

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md
Example/: CMakeLists.txt  Example.cpp
Include/LMath/: Area.h  Bounds.h  Defs.h  Element.h  Frustum.h  LMathConfig.h  Math.h  Matrix.h  Plane.h  PlaneBoundedVolume.h  Quaternion.h  Ray.h  Sphere.h  Vector.h
Test/: CMakeLists.txt  MathTest.cpp  Matrix3x3Test.cpp  Matrix4X4.cpp  QuaternionTest.cpp  Test.cpp  Vector2Test.cpp  Vector3Test.cpp
Test/catch2/: catch.hpp
