# CMakeList.txt : CMake project for GFXRendererD3D11, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Example "Example.cpp")

#add_library (GFXRendererD3D11 "GFXRendererD3D11.cpp" "GFXRendererD3D11.h")

# TODO: Add tests and install targets if needed.
